# min_specialization

./: Cargo.toml  README.md  lib.rs
proc-generics/: Cargo.toml
proc-generics/src/: lib.rs  normalize.rs  substitute.rs
src/: lib.rs  normalize.rs  substitute.rs
tests/: large.rs  large2.rs  no_self_arg.rs  test.rs
