[package]
name = "min-specialization"
version = "0.1.2"
description = "Experimental implementation of specialization"
license = "MIT"
authors = ["Yasuo Ozu <yasuo@ozu.email>"]
keywords = ["macros", "zerocost", "specialization"]
categories = ["rust-patterns"]
repository = "https://github.com/yasuo-ozu/min_specialization"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
template-quote = "0.4"
proc-macro-error = "1.0"
derive-syn-parse = "0.1.5"

[dependencies.syn]
version = "2.0"
features = [ "full", "derive", "printing", "extra-traits", "visit-mut", "visit"]
